<resources>
    <string name="app_name">ContactsManager</string>
    <string name="user_photo_description">user photo</string>
    <string name="fav_button_description">fav button</string>
    <string name="view_info_activity_name">Contact Information</string>
    <string name="phone_numers_text">PHONE NUMBERS:</string>
    <string name="email_address_text">Email address</string>
    <string name="type_of_data_description">type of data</string>
    <string name="add_contact_activity_title">Add contact</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="first_name_hint">First</string>
    <string name="middle_name_hint">Middle</string>
    <string name="last_name_hint">Last </string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="done_text">done</string>
    <string name="no_date_yet_text">no date yet</string>
    <string name="birthday_text">Birthday:</string>
    <string name="search_title_menu_item">search</string>
    <string name="address_text_view">ADDRESS</string>
    <string name="edit_menu_item">EDIT</string>
    <string name="edit_contact_activity_title">Edit contact</string>
    <string name="name_text">Name</string>

    <string-array name="spinner_phones_types">
        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
        <item>Fax</item>
    </string-array>

    <string-array name="spinner_email_types">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
    </string-array>

    <string-array name="spinner_address_types">
        <item>Home</item>
        <item>Work</item>
    </string-array>


    <string name="toast1">You most insert at least your name an a field that is not yout birthday</string>
    <string name="toast2">You most insert a field that is not your birthday</string>
    <string name="toast3">You most insert your name</string>
</resources>
