<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_view_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_view_info"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:title="@string/view_info_activity_name"
            app:titleTextColor="@color/white" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_below="@id/app_bar_view_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linear_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_photo"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16dp"
                android:contentDescription="@string/user_photo_description" />

            <TextView
                android:id="@+id/textview_name_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/textview_email_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/email_address_text"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16dp"/>

            <TextView
                android:id="@+id/textview_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/birthday_text"/>
            <TextView
                android:id="@+id/textview_birthday_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/text_24sp_size"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_16dp"/>

            <TextView
                android:id="@+id/textview_phone_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/phone_numers_text" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/phones_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_16dp"/>

            <TextView
                android:id="@+id/textview_address_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/address_text_view" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/address_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_16dp"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>